--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "eslint-plugin-react-compiler": "^0.0.0-experimental-51a85ea-20240601",
+    "formik": "^2.4.6",
+    "nouislider-react": "^3.4.2",
     "react": "next",
     "react-dom": "next",
+    "react-nouislider": "^2.0.1",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
