--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-datepicker": "^6.2.0",
+    "axios": "^1.7.2",
     "babel-plugin-react-compiler": "^0.0.0-experimental-938cd9a-20240601",
     "eslint-plugin-react-compiler": "^0.0.0-experimental-51a85ea-20240601",
     "formik": "^2.4.6",
@@ -20,7 +21,8 @@
     "react-dom": "next",
     "react-nouislider": "^2.0.1",
     "react-router-dom": "^6.24.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
