--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.49.2",
     "@tanstack/react-table": "^8.19.2",
+    "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "query": "tanstack/react-query",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
